# ChangeLog for net-im/ekg2
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Feb 2010; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  -ekg2-0.3_pre20090821.ebuild, +ekg2-0.3_pre20100213.ebuild:
  Fresh snapshot.

  08 Feb 2010; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  ekg2-9999.ebuild:
  Update to match new SCons options.

  08 Feb 2010; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  ekg2-0.3_pre20090821.ebuild:
  Confirmed working on x86.

  24 Jan 2010; Piotr Szymaniak <lazy_bum@o2.pl> ekg2-9999.ebuild:
  Temporary (?) fix for LFS issue in gpgme (see bug #302097 and bug #277890
  for details).

  16 Jan 2010; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  ekg2-0.3_pre20090821.ebuild:
  Update SRC_URI.

  21 Aug 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  ekg2-9999.ebuild:
  Readd SRC_URI.

  21 Aug 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  ekg2-0.3_pre20090821.ebuild:
  Change tarball name to make it distinct from autotools snapshots.

  21 Aug 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  +ekg2-0.3_pre20090821.ebuild:
  Adding snapshot ebuild.

  20 Aug 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  ekg2-9999.ebuild:
  Update live ebuild to support SKIPCHECKS introduced by upstream lately.

  16 Aug 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  ekg2-9999.ebuild:
  RDEPEND on libintl, DEPEND on gettext.

  15 Aug 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  ekg2-9999.ebuild:
  Depend on gettext instead of libintl as we need to compile the .po files.

  01 Aug 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  ekg2-9999.ebuild:
  Simplify DEPEND/RDEPEND.

  01 Aug 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +ekg2-9999.ebuild, -ekg2-99999999.ebuild:
  Rename to -9999, four digits should be enough

  01 Aug 2009; Markos Chandras <hwoarang@gentoo.org> ekg2-99999999.ebuild:
  Ebuild clean up
