@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Feb 2010; Piotr Szymaniak <lazy_bum@o2.pl> ekg2-9999.ebuild:
+  Changed gpg-fix logic and inherited flag-o-matic so the fix works.
+
   12 Feb 2010; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
   -ekg2-0.3_pre20090821.ebuild, +ekg2-0.3_pre20100213.ebuild:
   Fresh snapshot.
